<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/heading"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/description_login"
            android:textAllCaps="false"
            android:textColor="#546e7a"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <TextView
            android:id="@+id/feature1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature1"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/Description" />

        <TextView
            android:id="@+id/feature2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/feature1" />

        <TextView
            android:id="@+id/feature3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature3"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/feature2" />

        <TextView
            android:id="@+id/feature4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature4"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/feature3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/border_shadow"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/feature4" />

        <TextView
            android:id="@+id/Description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/description2_login"
            android:textColor="#546e7a"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/feature4" />

        <TextView
            android:id="@+id/feature1_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature1_des2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/Description2" />

        <TextView
            android:id="@+id/feature2_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature2_des2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/feature1_cloud" />

        <TextView
            android:id="@+id/feature3_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/feature3_des2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/feature2_cloud" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/website_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape"
        android:drawableStart="@drawable/website"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/ieee_string"
        android:textAllCaps="false"
        android:textColor="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_shape2"
        android:drawableStart="@drawable/gicon2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="#e1ebf7"
        app:layout_constraintBottom_toTopOf="@id/website_link" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

</android.support.constraint.ConstraintLayout>