<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline6"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Title_problem"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="@string/title"
                android:textColor="@color/black"
                android:paddingStart="8dp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/day"
                android:text="@string/day"
                android:paddingStart="8dp"
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Title_problem" />


            <TextView
                android:id="@+id/month"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:paddingStart="4dp"
                android:paddingBottom="8dp"
                app:layout_constraintLeft_toRightOf="@id/day"
                app:layout_constraintTop_toBottomOf="@id/Title_problem" />

            <TextView
                android:id="@+id/problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="9dp"
                android:paddingBottom="8dp"
                android:maxLines="3"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/month"
                android:text="@string/text_cardview"/>

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textSize="19sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/like" />

            <ImageButton
                android:id="@+id/like"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:elevation="0dp"
                android:src="@drawable/like1nofill"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bookmark"
                android:contentDescription="@string/like" />

            <ImageButton
                android:src="@drawable/bookmarknofill"
                android:background="@color/white"
                android:id="@+id/bookmark"
                android:elevation="0dp"
                android:layout_marginEnd="8dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/bookmark" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />
</android.support.constraint.ConstraintLayout>